# Guardian_PDF

./: .env.example  .gitignore  CONTRIBUTING.md  DEPLOYMENT.md  DEPLOYMENT_STATUS.md  Dockerfile  FLY_DEPLOY.md  GITHUB_SETUP.md  LICENSE  NVIDIA_SETUP.md  PROJECT_SUMMARY.md  QUICKSTART.md  RAILWAY_DEPLOY.md  README.md  RENDER_DEPLOY.md  TEST_RESULTS.md  benchmark.py  docker-compose.yml  fly.toml  railway.json  railway_build.sh  render.yaml  start_server.sh  test_api.py  test_content.txt  test_cpp_module.py  test_nvidia.py  test_security.py
cpp_engine/: CMakeLists.txt  requirements.txt
cpp_engine/src/: PDFShredder.cpp  PDFShredder.h  RabinKarpDedup.cpp  RabinKarpDedup.h  TextChunker.cpp  TextChunker.h  bindings.cpp
cpp_engine/tests/: test_pdfshredder.cpp
frontend/: index.html  script.js  style.css
rag_engine/: app.py  embeddings.py  rag_pipeline.py  requirements.txt  vector_store.py
rag_engine/tests/: test_integration.py
security_auditor/: perplexity_analyzer.py  requirements.txt  signature_verifier.py
security_auditor/tests/: test_ai_detection.py
